--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: Omoro Ouma
 
 # Short bio or description (displayed in the header)
 description: Hello world,
-My name is Omoro,an infomation security enthusiast with an economics and mathematics background. 
+My name is Omoro,i have special interest in infomation security and machine learning, i have a background in economics and mathematics. 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/account
 
@@ -25,7 +25,7 @@ footer-links:
   instagram:
   linkedin:omoro ouma
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: @
   twitter:0moroouma1
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
